2003-07-09  Philippe Elie  <phil.el@wanadoo.fr>

	* module/x86/op_model_p4.c: reflect intel documentation fix.

2003-07-08  Will Cohen  <wcohen@redhat.com>

	* daemon/opd_kernel.c: Handle /proc/modules format.
	
2003-07-08  Will Cohen  <wcohen@redhat.com>

	* doc/oprofile.xml:
	* configure.in: --enable-gcov option and documentation.

2003-07-08  Will Cohen  <wcohen@redhat.com>

	* utils/opcontrol: Correct P4 default event.

2003-07-07  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opannotate.cpp:
	* pp/opgprof.cpp:
	* pp/opreport.cpp: cleanup walking through multimap with a
	  pair<iterator, iterator>

2003-07-05  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_image.c:
	* libdb/db_insert.c: 64 bits arch compile fix, thanks to Falk Hueffner
	 <falk@debian.org>

2003-07-02  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opreport.cpp: honor options::show_header

2003-06-30  Graydon Hoare  <graydon@redhat.com>

	* libpp/op_header.cpp: Handle printing multiple bitmask values.

2003-06-19  John Levon  <levon@movementarian.org>

	* doc/Makefile.am: fix make distcheck

2003-06-18  John Levon  <levon@movementarian.org>

	* pp/opannotate_options.c: hide the unhandled
	--base-dir option

2003-06-18  John Levon  <levon@movementarian.org>

	* pp/Makefile.am: don't build opdiff

2003-06-17  Will Cohen  <wcohen@redhat.com>

	* daemon/opd_cookie.h: Add s390 syscall value.
	
2003-06-17  John Levon  <levon@movementarian.org>

	* utils/opcontrol: don't accept "-r" - it's too easy to typo

2003-06-17  John Levon  <levon@movementarian.org>

	* doc/srcdoc/Doxyfile: removed

	* doc/srcdoc/Doxyfile.in:
	* configure.in: generate doxygen version nr. automatically

2003-06-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db_insert.cpp: missing initialization of error message on
	  error path

2003-06-17  John Levon  <levon@movementarian.org>

	* utils/opcontrol: accept some short forms for common
	operations

2003-06-17  John Levon  <levon@movementarian.org>
